// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandLogo renders dark custom branding logo 1`] = `
<img
  src="l"
/>
`;

exports[`BrandLogo renders dark sourcegraph logo 1`] = `
<img
  src="/assets/img/sourcegraph-head-logo.svg?v2"
/>
`;

exports[`BrandLogo renders light custom branding logo 1`] = `
<img
  src="l"
/>
`;

exports[`BrandLogo renders light sourcegraph logo 1`] = `
<img
  src="/assets/img/sourcegraph-light-head-logo.svg?v2"
/>
`;
